# SimpleArgumentsParser

./: CMakeLists.txt  README.md
Headers/: ArgInfos.h  ArgOptions.h  ArgStringParsers.h  ArgValue.h  ArgsParser.h  ArgsParserException.h  ArgsParserHelpStruct.h
Sources/: ArgInfos.cpp  ArgOptions.cpp  ArgsParser.cpp  ArgsParserException.cpp
Tests/: CMakeLists.txt  SimpleArgsParserTests.cpp
